gloo-mesh/gm2.0/workshop/gitops/argocd/argocd-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'argocd.gloo-mesh.istiodemos.io'
    routes:          
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: argocd-argo-cd-argocd-server-80
            namespace: gloo-system
